Current Release
- Added duplicate record checking in zone_exporter_lib

2010-01-27 release-0.11
- Added missing named conf error in tree_exporter.py
- Added missing soa record error in zone_exporter.py
- Added sane defaults in dnslstreexport
- Fixed tree_exporter skipping certain records
- Fixed view/zone combination in tree_exporter
- Added soa in any view error in zone_exporter
- Fixed tree exporter file locations
- Fixed dnsconfigsync config file location
- Fixed view dependency conversion in the tree exporter

2009-12-18 release-0.10

2009-12-09 release-0.9

2009-12-07 release-0.8

2009-11-16 release-0.7
- Added MANIFEST to fix install problems.

2009-11-16 release-0.6

2009-09-23 release-0.5
- Made trunk install as 0.1
- Fixed current_version variable in setups
- Fixed tree exporter mixing up 'acl_name' and 'acl_cidr_block'
- Fixed tree exporter redefining "any" acl
- Fixed duplicate server names in tree exporter
- Made dnsconfigsync restart bind after syncing
- made dnsconfigsync tell what is going on
- Added dnscheckconfig
- Fixed dnscheckconfig error handling and file handling
- Added dnsexportconfig, updated setup