@@ -59,14 +59,23 @@ def main(args):
                     help='Zone file to load in. Mutually exclusive from '
                          '-d/--directory.', metavar='<file>',
                     default=None)
-  parser.add_option('-v', '--view', action='store', dest='view',
-                    help='View to put records in.', metavar='<view>',
-                    default=None)
+  parser.add_option('-v', '--records_view', action='store', dest='records_view',
+                    help='View to put records in. (This should be the any view '
+                         'most of the time)', metavar='<view>',
+                    default=u'any')
+  parser.add_option('-z', '--zone_view', action='store', dest='zone_view',
+                    help='View to display records (Cannot be the any view).',
+                    metavar='<view>', default=None)
 
   (globals()["options"], args) = parser.parse_args(args)
 
   if( options.config is None ):
     print "Must specify --config flag."
+    parser.print_help()
+    sys.exit(1)
+
+  if( options.zone_view is None ):
+    print "Must specify --zone_view flag"
     parser.print_help()
     sys.exit(1)
 
@@ -90,7 +99,8 @@ def main(args):
       options.file = '%s/%s' % (options.directory, options.file)
     print 'Loading in %s' % options.file
     importer = zone_importer_lib.ZoneImport(options.file, options.config,
-                                            user, view=options.view)
+                                            user, unicode(options.zone_view),
+                                            records_view=options.records_view)
 
     record_count = importer.MakeRecordsFromZone()
     print '%s records loaded from zone %s' % (record_count, options.file)
